packages/jsii/test/negatives/neg.class-name.ts
///!MATCH_ERROR: Type names must begin with an uppercase characters: myclass

export class myclass {

}
